// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`IconMenuItem rendering renders expected elements 1`] = `
<div
  className="IconMenu__option"
  role="menuitem"
  tabIndex={-1}
>
  Test
</div>
`;

exports[`IconMenuItem rendering renders expected elements when optional properties are set 1`] = `
<div
  aria-disabled={true}
  className="IconMenu__option IconMenu--divider TestClass"
  role="menuitem"
  tabIndex={-1}
>
  Test
</div>
`;
